--- a/wsresource_dev.plist
+++ b/wsresource_dev.plist
@@ -60,5 +60,23 @@
 		<key>Accept</key>
 		<string>application/json</string>
 	</dict>
+	<key>GetUpcomingMeetBalls</key>
+	<dict>
+		<key>URL</key>
+		<string>http://wsdev.meetball.com/2.0/service.svc/json/Meetball/Current/{sessionID}?appUserId={appUserID}</string>
+		<key>method</key>
+		<string>GET</string>
+	</dict>
+	<key>resetPassword</key>
+	<dict>
+		<key>URL</key>
+		<string>http://wsdev.meetball.com/2.0/service.svc/json/AppUser/ResetPassword</string>
+		<key>method</key>
+		<string>POST</string>
+		<key>Accept</key>
+		<string>application/json</string>
+		<key>Content-Type</key>
+		<string>application/json</string>
+	</dict>
 </dict>
 </plist>
