--- a/wsresource_dev.plist
+++ b/wsresource_dev.plist
@@ -8,8 +8,8 @@
 		<string>http://wsdev.meetball.com/2.0/service.svc/json/Session/Login</string>
 		<key>method</key>
 		<string>POST</string>
-		<key>apikey</key>
-		<string>43f1f673-959b-4abd-8619-027902a3a4a8</string>
+		<key>apiKey</key>
+		<string>6FC455D3-6207-4112-9D71-005A6EF96422</string>
 		<key>Content-Type</key>
 		<string>application/json</string>
 		<key>Accept</key>
@@ -25,7 +25,9 @@
 	<key>GetSessionID</key>
 	<dict>
 		<key>URL</key>
-		<string>http://wsdev.meetball.com/2.0/service.svc/json/Session/GetSessionId?existingId=null&amp;appUserId=-1&amp;apiKey=43f1f673-959b-4abd-8619-027902a3a4a8</string>
+		<string>http://wsdev.meetball.com/2.0/service.svc/json/Session/GetSessionId?existingId=null&amp;appUserId=-1&amp;apiKey={apiKey}</string>
+		<key>apiKey</key>
+		<string>6FC455D3-6207-4112-9D71-005A6EF96422</string>
 		<key>method</key>
 		<string>GET</string>
 	</dict>
