--- a/MeetBallApp/MeetBallApp-Info.plist
+++ b/MeetBallApp/MeetBallApp-Info.plist
@@ -78,6 +78,6 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
