--- a/wsresources_dev.plist
+++ b/wsresources_dev.plist
@@ -80,5 +80,12 @@
 		<key>Content-Type</key>
 		<string>application/json</string>
 	</dict>
+	<key>GetMeetBallFriends</key>
+	<dict>
+		<key>URL</key>
+		<string>http://wsdev.meetball.com/{version}/service.svc/json/AppUser/Friend/{sessionId}?appUserId={appUserId}&amp;friendStatus=1</string>
+		<key>method</key>
+		<string>GET</string>
+	</dict>
 </dict>
 </plist>
